Fixing overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html,body{
+  overflow-x: hidden;
+}
 /* Base */
 body {
   line-height: 1.7;
